# industry-codes

./: DATA_ACCESS.md  LICENSE  README.md  examples.py  industry_codes.json  main.py  pyproject.toml  pytest.ini
.github/workflows/: scrape.yml  test.yml
industry_codes/: __init__.py  matcher.py  scraper.py
industry_codes/data/: .gitkeep
linkedin_industry_codes/: __init__.py  matcher.py  scraper.py
tests/: __init__.py  conftest.py  test_matcher.py  test_scraper.py
