[project]
name = "industry-codes"
version = "0.1.0"
description = "Industry Codes scraper and similarity matcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "lxml>=5.0.0",
    "python-levenshtein>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["industry_codes"]
